--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Visionnaire - Product Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -37,19 +38,19 @@
   <!-- Product Grid -->
   <main class="product-grid">
     <div class="product-card">
-      <img src="placeholder.jpg" alt="Product Image">
+      <img src="image/product1.png" alt="Product Image">
       <h3>Redding</h3>
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="placeholder.jpg" alt="Product Image">
+      <img src="image/product2.png" alt="Product Image">
       <h3>Amerigo</h3>
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="placeholder.jpg" alt="Product Image">
+      <img src="image/product3.png" alt="Product Image">
       <h3>Basket</h3>
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
