--- a/products.html
+++ b/products.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <title>Visionnaire - Product Page</title>
+  <title>Visionnaire - Products</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Top Navigation -->
+  <!-- header fragment will be injected here -->
   <div id="site-header"></div>
 
-  <!-- Filter + Results -->
+  <!-- Filters + Results (keep as in index or modify) -->
   <section class="filters">
     <div class="filter-title">Filters</div>
     <div class="results-count">76 Results</div>
   </section>
 
-  <!-- Product Grid -->
+  <!-- Product Grid: 18 cards -->
   <main class="product-grid">
+    <!-- copy/paste the 18 product-card blocks you already prepared -->
+    <!-- Example three cards (repeat them until you have 18) -->
     <div class="product-card">
       <img src="image/product1.png" alt="Product Image">
       <h3>Redding</h3>
@@ -38,11 +40,12 @@
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
-    <!-- Repeat cards as needed -->
+    <!-- repeat above blocks until 18 cards total -->
   </main>
 
-  <!-- Footer -->
+  <!-- footer fragment will be injected here -->
   <div id="site-footer"></div>
+
   <script src="fragments.js"></script>
 </body>
 </html>
