--- a/header.html
+++ b/header.html
@@ -1,5 +1,4 @@
 <header>
-    <div class="logo">visionnaire</div>
     <nav class="main-nav">
       <ul>
         <li>Products</li>
@@ -7,6 +6,9 @@
         <li>Interiors</li>
       </ul>
     </nav>
+  
+    <div class="logo">aeliving</div>
+  
     <nav class="secondary-nav">
       <ul>
         <li>Stores</li>
@@ -15,5 +17,4 @@
         <li>🔍</li>
       </ul>
     </nav>
-  </header>
-  
+  </header>  
