--- a/index.html
+++ b/index.html
@@ -2,47 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <title>Visionnaire - Product Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta http-equiv="refresh" content="0; url=products.html">
+  <title>Redirecting...</title>
 </head>
 <body>
-
-  <!-- Top Navigation -->
-  <div id="site-header"></div>
-
-  <!-- Filter + Results -->
-  <section class="filters">
-    <div class="filter-title">Filters</div>
-    <div class="results-count">76 Results</div>
-  </section>
-
-  <!-- Product Grid -->
-  <main class="product-grid">
-    <div class="product-card">
-      <img src="image/product1.png" alt="Product Image">
-      <h3>Redding</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
-    </div>
-    <div class="product-card">
-      <img src="image/product2.png" alt="Product Image">
-      <h3>Amerigo</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
-    </div>
-    <div class="product-card">
-      <img src="image/product3.png" alt="Product Image">
-      <h3>Basket</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
-    </div>
-    <!-- Repeat cards as needed -->
-  </main>
-
-  <!-- Footer -->
-  <div id="site-footer"></div>
-  <script src="fragments.js"></script>
+  <p>If you are not redirected automatically, <a href="products.html">click here</a>.</p>
 </body>
 </html>
