--- a/products.html
+++ b/products.html
@@ -20,8 +20,7 @@
 
   <!-- Product Grid: 18 cards -->
   <main class="product-grid">
-    <!-- copy/paste the 18 product-card blocks you already prepared -->
-    <!-- Example three cards (repeat them until you have 18) -->
+    <!-- Row 1 -->
     <div class="product-card">
       <img src="image/product1.png" alt="Product Image">
       <h3>Redding</h3>
@@ -40,8 +39,107 @@
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
-    <!-- repeat above blocks until 18 cards total -->
-  </main>
+  
+    <!-- Row 2 -->
+    <div class="product-card">
+      <img src="image/product1.png" alt="Product Image">
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product2.png" alt="Product Image">
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product3.png" alt="Product Image">
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+  
+    <!-- Row 3 -->
+    <div class="product-card">
+      <img src="image/product1.png" alt="Product Image">
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product2.png" alt="Product Image">
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product3.png" alt="Product Image">
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+  
+    <!-- Row 4 -->
+    <div class="product-card">
+      <img src="image/product1.png" alt="Product Image">
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product2.png" alt="Product Image">
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product3.png" alt="Product Image">
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+  
+    <!-- Row 5 -->
+    <div class="product-card">
+      <img src="image/product1.png" alt="Product Image">
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product2.png" alt="Product Image">
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product3.png" alt="Product Image">
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+  
+    <!-- Row 6 -->
+    <div class="product-card">
+      <img src="image/product1.png" alt="Product Image">
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product2.png" alt="Product Image">
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+    <div class="product-card">
+      <img src="image/product3.png" alt="Product Image">
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
+    </div>
+  </main>  
 
   <!-- footer fragment will be injected here -->
   <div id="site-footer"></div>
