--- a/header.html
+++ b/header.html
@@ -1,20 +1,23 @@
-<header>
-    <nav class="main-nav">
-      <ul>
-        <li>Products</li>
-        <li>Rooms</li>
-        <li>Interiors</li>
-      </ul>
-    </nav>
+<header class="transparent-header-text">
+    <div class="header-inner container">
+      <nav class="main-nav">
+        <ul>
+          <li>Products</li>
+          <li>Rooms</li>
+          <li>Interiors</li>
+        </ul>
+      </nav>
   
-    <div class="logo">aeliving</div>
+      <div class="logo">aeliving</div>
   
-    <nav class="secondary-nav">
-      <ul>
-        <li>Stores</li>
-        <li>Designer</li>
-        <li>Journal</li>
-        <li>🔍</li>
-      </ul>
-    </nav>
-  </header>  
+      <nav class="secondary-nav">
+        <ul>
+          <li>Stores</li>
+          <li>Designer</li>
+          <li>Journal</li>
+          <li>🔍</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  
