--- a/products.html
+++ b/products.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Visionnaire - Products</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>aeliving - Products</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <!-- header fragment will be injected here -->
   <div id="site-header"></div>
 
-  <!-- Filters + Results (keep as in index or modify) -->
+  <!-- Hero Section (full-bleed) -->
+  <section class="hero">
+    <div class="hero-text">
+      <h1>A synthesis of excellence and refined aesthetics.</h1>
+    </div>
+  </section>
+
+  <!-- Filters + Results -->
   <section class="filters">
-    <div class="filter-title">Filters</div>
-    <div class="results-count">76 Results</div>
+    <div class="align-container">
+      <div class="filter-title">Filters</div>
+      <div class="results-count">76 Results</div>
+    </div>
   </section>
 
   <!-- Product Grid: 18 cards -->
@@ -39,7 +48,7 @@
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
-  
+
     <!-- Row 2 -->
     <div class="product-card">
       <img src="image/product1.png" alt="Product Image">
@@ -59,7 +68,7 @@
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
-  
+
     <!-- Row 3 -->
     <div class="product-card">
       <img src="image/product1.png" alt="Product Image">
@@ -79,7 +88,7 @@
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
-  
+
     <!-- Row 4 -->
     <div class="product-card">
       <img src="image/product1.png" alt="Product Image">
@@ -99,7 +108,7 @@
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
-  
+
     <!-- Row 5 -->
     <div class="product-card">
       <img src="image/product1.png" alt="Product Image">
@@ -119,7 +128,7 @@
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
-  
+
     <!-- Row 6 -->
     <div class="product-card">
       <img src="image/product1.png" alt="Product Image">
@@ -139,7 +148,7 @@
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
-  </main>  
+  </main>
 
   <!-- footer fragment will be injected here -->
   <div id="site-footer"></div>
