--- a/products.html
+++ b/products.html
@@ -12,12 +12,66 @@
   <!-- header fragment will be injected here -->
   <div id="site-header"></div>
 
-  <!-- Hero Section (full-bleed) -->
-  <section class="hero">
+<!-- Hero Section -->
+<section class="hero">
     <div class="hero-text">
       <h1>A synthesis of excellence and refined aesthetics.</h1>
     </div>
   </section>
+  
+<!-- Category Carousel -->
+<section class="carousel-section">
+    <button class="carousel-arrow left hidden" aria-label="Scroll Left">‹</button>
+    <div class="carousel-container">
+      <div class="carousel-track">
+        <div class="carousel-card">
+          <img src="image/category-sofas.png" alt="Sofas">
+          <div class="overlay">
+            <h3>Sofas</h3>
+            <a href="#">Discover more</a>
+          </div>
+        </div>
+        <div class="carousel-card">
+          <img src="image/category-armchairs.png" alt="Armchairs">
+          <div class="overlay">
+            <h3>Armchairs</h3>
+            <a href="#">Discover more</a>
+          </div>
+        </div>
+        <div class="carousel-card">
+          <img src="image/category-beds.png" alt="Beds">
+          <div class="overlay">
+            <h3>Beds</h3>
+            <a href="#">Discover more</a>
+          </div>
+        </div>
+        <div class="carousel-card">
+          <img src="image/category-tables.png" alt="Tables">
+          <div class="overlay">
+            <h3>Tables</h3>
+            <a href="#">Discover more</a>
+          </div>
+        </div>
+        <div class="carousel-card">
+          <img src="image/category-lighting.png" alt="Lighting">
+          <div class="overlay">
+            <h3>Lighting</h3>
+            <a href="#">Discover more</a>
+          </div>
+        </div>
+        <div class="carousel-card">
+          <img src="image/category-outdoor.png" alt="Outdoor">
+          <div class="overlay">
+            <h3>Outdoor</h3>
+            <a href="#">Discover more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-arrow right" aria-label="Scroll Right">›</button>
+  </section>
+  
+  
 
   <!-- Filters + Results -->
   <section class="filters">
