--- a/header.html
+++ b/header.html
@@ -8,7 +8,9 @@
         </ul>
       </nav>
   
-      <div class="logo">aeliving</div>
+      <div class="logo">
+        <img src="image/aeliving-logo.webp" alt="aeliving logo">
+      </div>      
   
       <nav class="secondary-nav">
         <ul>
