--- a/products.html
+++ b/products.html
@@ -21,56 +21,41 @@
   
 <!-- Category Carousel -->
 <section class="carousel-section">
-    <button class="carousel-arrow left hidden" aria-label="Scroll Left">‹</button>
-    <div class="carousel-container">
-      <div class="carousel-track">
-        <div class="carousel-card">
-          <img src="image/category-sofas.png" alt="Sofas">
-          <div class="overlay">
-            <h3>Sofas</h3>
-            <a href="#">Discover more</a>
+    <div class="carousel-inner">
+      <button class="carousel-arrow left hidden" aria-label="Scroll Left">‹</button>
+      <div class="carousel-container">
+        <div class="carousel-track">
+          <!-- Repeat enough cards for looping -->
+          <div class="carousel-card">
+            <img src="image/category-sofas.png" alt="Sofas">
+            <div class="overlay"><h3>Sofas</h3><a href="#">Discover more</a></div>
+          </div>
+          <div class="carousel-card">
+            <img src="image/category-armchairs.png" alt="Armchairs">
+            <div class="overlay"><h3>Armchairs</h3><a href="#">Discover more</a></div>
+          </div>
+          <div class="carousel-card">
+            <img src="image/category-beds.png" alt="Beds">
+            <div class="overlay"><h3>Beds</h3><a href="#">Discover more</a></div>
+          </div>
+          <div class="carousel-card">
+            <img src="image/category-tables.png" alt="Tables">
+            <div class="overlay"><h3>Tables</h3><a href="#">Discover more</a></div>
+          </div>
+          <div class="carousel-card">
+            <img src="image/category-lighting.png" alt="Lighting">
+            <div class="overlay"><h3>Lighting</h3><a href="#">Discover more</a></div>
+          </div>
+          <div class="carousel-card">
+            <img src="image/category-outdoor.png" alt="Outdoor">
+            <div class="overlay"><h3>Outdoor</h3><a href="#">Discover more</a></div>
           </div>
         </div>
-        <div class="carousel-card">
-          <img src="image/category-armchairs.png" alt="Armchairs">
-          <div class="overlay">
-            <h3>Armchairs</h3>
-            <a href="#">Discover more</a>
-          </div>
-        </div>
-        <div class="carousel-card">
-          <img src="image/category-beds.png" alt="Beds">
-          <div class="overlay">
-            <h3>Beds</h3>
-            <a href="#">Discover more</a>
-          </div>
-        </div>
-        <div class="carousel-card">
-          <img src="image/category-tables.png" alt="Tables">
-          <div class="overlay">
-            <h3>Tables</h3>
-            <a href="#">Discover more</a>
-          </div>
-        </div>
-        <div class="carousel-card">
-          <img src="image/category-lighting.png" alt="Lighting">
-          <div class="overlay">
-            <h3>Lighting</h3>
-            <a href="#">Discover more</a>
-          </div>
-        </div>
-        <div class="carousel-card">
-          <img src="image/category-outdoor.png" alt="Outdoor">
-          <div class="overlay">
-            <h3>Outdoor</h3>
-            <a href="#">Discover more</a>
-          </div>
-        </div>
+        <div class="carousel-fade"></div>
       </div>
+      <button class="carousel-arrow right" aria-label="Scroll Right">›</button>
     </div>
-    <button class="carousel-arrow right" aria-label="Scroll Right">›</button>
   </section>
-  
   
 
   <!-- Filters + Results -->
