--- a/footer.html
+++ b/footer.html
@@ -1,18 +1,91 @@
 <footer>
-    <section class="discover-rooms">
+    <!-- Discover by Rooms -->
+    <section class="discover-rooms container">
       <h2>Discover by Rooms</h2>
       <ul>
-        <li>Living Room</li>
-        <li>Bedroom</li>
-        <li>Dining</li>
-        <li>Outdoor</li>
+        <li><a href="#">Living Room</a></li>
+        <li><a href="#">Dining Room</a></li>
+        <li><a href="#">Bedroom</a></li>
+        <li><a href="#">Kitchen</a></li>
+        <li><a href="#">Office Room</a></li>
+        <li><a href="#">Walk-In Closet</a></li>
+        <li><a href="#">Wellness</a></li>
+        <li><a href="#">Outdoor</a></li>
+        <li><a href="#">Fitness Collection</a></li>
+        <li><a href="#">Home Theatre</a></li>
       </ul>
     </section>
   
-    <section class="cta-boxes">
-      <div class="cta">Contacts</div>
-      <div class="cta">Catalogues</div>
-      <div class="cta">Newsletter</div>
+    <!-- Call-to-Action Boxes -->
+    <section class="cta-boxes container">
+      <div class="cta">
+        <img src="image/logo/contact.svg" alt="Contacts Icon">
+        <h3>Contacts</h3>
+        <p>Speak directly with one of our specialists for assistance.</p>
+        <a href="#">Contact a specialist →</a>
+      </div>
+  
+      <div class="cta">
+        <img src="image/logo/catalogues.svg" alt="Catalogues Icon">
+        <h3>Catalogues</h3>
+        <p>Browse or download our latest digital catalogues.</p>
+        <a href="#">Download →</a>
+      </div>
+  
+      <div class="cta">
+        <img src="image/logo/newsletter.svg" alt="Newsletter Icon">
+        <h3>Newsletter</h3>
+        <p>Stay updated with the latest news, trends, and events.</p>
+        <a href="#">Subscribe →</a>
+      </div>
     </section>
-  </footer>
+</footer>
+
+<!-- Final Global Footer -->
+<footer class="global-footer">
+  <div class="footer-columns container">
+    <div class="footer-col brand">
+      <img src="image/aeliving-logo.webp" alt="aeliving Logo">
+      <p>© 2025 aeliving. All rights reserved.</p>
+    </div>
+
+    <div class="footer-col">
+      <h4>Company</h4>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Stores</a></li>
+        <li><a href="#">Careers</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Professional Tools</h4>
+      <ul>
+        <li><a href="#">Catalogue</a></li>
+        <li><a href="#">Configurator</a></li>
+        <li><a href="#">Press Area</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Legals</h4>
+      <ul>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Cookie Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Follow Us</h4>
+      <ul class="social-links">
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Pinterest</a></li>
+        <li><a href="#">YouTube</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
   
