--- a/products.html
+++ b/products.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-  <!-- header fragment will be injected here -->
-  <div id="site-header"></div>
+    <!-- header fragment will be injected here -->
+    <div id="site-header"></div>
 
 <!-- Hero Section -->
 <section class="hero">
@@ -70,122 +70,176 @@
   <main class="product-grid">
     <!-- Row 1 -->
     <div class="product-card">
-      <img src="image/product1.png" alt="Product Image">
-      <h3>Redding</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product1.png" alt="Redding" class="default-img">
+          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
+        </div>
+        <h3>Redding</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
+    </div>      
+    <div class="product-card">
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product2.png" alt="Amerigo" class="default-img">
+          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
+        </div>
+        <h3>Amerigo</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product2.png" alt="Product Image">
-      <h3>Amerigo</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
-    </div>
-    <div class="product-card">
-      <img src="image/product3.png" alt="Product Image">
-      <h3>Basket</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product3.png" alt="Basket" class="default-img">
+          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
+        </div>
+        <h3>Basket</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
 
     <!-- Row 2 -->
     <div class="product-card">
-      <img src="image/product1.png" alt="Product Image">
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product1.png" alt="Redding" class="default-img">
+          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
+        </div>
       <h3>Redding</h3>
       <p class="designer">Designer Name</p>
       <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product2.png" alt="Product Image">
-      <h3>Amerigo</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product2.png" alt="Amerigo" class="default-img">
+          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
+        </div>
+        <h3>Amerigo</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product3.png" alt="Product Image">
-      <h3>Basket</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product3.png" alt="Basket" class="default-img">
+          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
+        </div>
+        <h3>Basket</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
 
     <!-- Row 3 -->
     <div class="product-card">
-      <img src="image/product1.png" alt="Product Image">
-      <h3>Redding</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product1.png" alt="Redding" class="default-img">
+          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
+        </div>
+        <h3>Redding</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product2.png" alt="Product Image">
-      <h3>Amerigo</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product2.png" alt="Amerigo" class="default-img">
+          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
+        </div>
+        <h3>Amerigo</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product3.png" alt="Product Image">
-      <h3>Basket</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product3.png" alt="Basket" class="default-img">
+          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
+        </div>
+        <h3>Basket</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
 
     <!-- Row 4 -->
     <div class="product-card">
-      <img src="image/product1.png" alt="Product Image">
-      <h3>Redding</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product1.png" alt="Redding" class="default-img">
+          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
+        </div>
+        <h3>Redding</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product2.png" alt="Product Image">
-      <h3>Amerigo</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product2.png" alt="Amerigo" class="default-img">
+          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
+        </div>
+        <h3>Amerigo</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product3.png" alt="Product Image">
-      <h3>Basket</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product3.png" alt="Basket" class="default-img">
+          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
+        </div>
+        <h3>Basket</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
 
     <!-- Row 5 -->
     <div class="product-card">
-      <img src="image/product1.png" alt="Product Image">
-      <h3>Redding</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product1.png" alt="Redding" class="default-img">
+          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
+        </div>
+        <h3>Redding</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product2.png" alt="Product Image">
-      <h3>Amerigo</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product2.png" alt="Amerigo" class="default-img">
+          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
+        </div>
+        <h3>Amerigo</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product3.png" alt="Product Image">
-      <h3>Basket</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product3.png" alt="Basket" class="default-img">
+          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
+        </div>
+        <h3>Basket</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
 
     <!-- Row 6 -->
     <div class="product-card">
-      <img src="image/product1.png" alt="Product Image">
-      <h3>Redding</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product1.png" alt="Redding" class="default-img">
+          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
+        </div>
+        <h3>Redding</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product2.png" alt="Product Image">
-      <h3>Amerigo</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product2.png" alt="Amerigo" class="default-img">
+          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
+        </div>
+        <h3>Amerigo</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
     <div class="product-card">
-      <img src="image/product3.png" alt="Product Image">
-      <h3>Basket</h3>
-      <p class="designer">Designer Name</p>
-      <p class="category">Category</p>
+        <div class="image-wrapper" style="position: relative; overflow: hidden;">
+          <img src="image/product3.png" alt="Basket" class="default-img">
+          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
+        </div>
+        <h3>Basket</h3>
+        <p class="designer">Designer Name</p>
+        <p class="category">Category</p>
     </div>
   </main>
 
