--- a/products.html
+++ b/products.html
@@ -70,31 +70,31 @@
   <main class="product-grid">
     <!-- Row 1 -->
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product1.png" alt="Redding" class="default-img">
-          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
-        </div>
-        <h3>Redding</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product1.png" class="default-img" alt="Product 1">
+        <img src="image/product1-hover.png" class="hover-img" alt="Product 1 hover" loading="eager">
+      </div>
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>      
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product2.png" alt="Amerigo" class="default-img">
-          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
-        </div>
-        <h3>Amerigo</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product2.png" class="default-img" alt="Product 2">
+        <img src="image/product2-hover.png" class="hover-img" alt="Product 2 hover" loading="eager">
+      </div>
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product3.png" alt="Basket" class="default-img">
-          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
-        </div>
-        <h3>Basket</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product3.png" class="default-img" alt="Product 3">
+        <img src="image/product3-hover.png" class="hover-img" alt="Product 3 hover" loading="eager">
+      </div>
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
 
     <!-- Row 2 -->
@@ -108,138 +108,138 @@
       <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product2.png" alt="Amerigo" class="default-img">
-          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
-        </div>
-        <h3>Amerigo</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product2.png" class="default-img" alt="Product 2">
+        <img src="image/product2-hover.png" class="hover-img" alt="Product 2 hover" loading="eager">
+      </div>
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product3.png" alt="Basket" class="default-img">
-          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
-        </div>
-        <h3>Basket</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product3.png" class="default-img" alt="Product 3">
+        <img src="image/product3-hover.png" class="hover-img" alt="Product 3 hover" loading="eager">
+      </div>
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
 
     <!-- Row 3 -->
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product1.png" alt="Redding" class="default-img">
-          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
-        </div>
-        <h3>Redding</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product1.png" class="default-img" alt="Product 1">
+        <img src="image/product1-hover.png" class="hover-img" alt="Product 1 hover" loading="eager">
+      </div>
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product2.png" alt="Amerigo" class="default-img">
-          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
-        </div>
-        <h3>Amerigo</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product2.png" class="default-img" alt="Product 2">
+        <img src="image/product2-hover.png" class="hover-img" alt="Product 2 hover" loading="eager">
+      </div>
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product3.png" alt="Basket" class="default-img">
-          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
-        </div>
-        <h3>Basket</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product3.png" class="default-img" alt="Product 3">
+        <img src="image/product3-hover.png" class="hover-img" alt="Product 3 hover" loading="eager">
+      </div>
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
 
     <!-- Row 4 -->
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product1.png" alt="Redding" class="default-img">
-          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
-        </div>
-        <h3>Redding</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product1.png" class="default-img" alt="Product 1">
+        <img src="image/product1-hover.png" class="hover-img" alt="Product 1 hover" loading="eager">
+      </div>
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product2.png" alt="Amerigo" class="default-img">
-          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
-        </div>
-        <h3>Amerigo</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product2.png" class="default-img" alt="Product 2">
+        <img src="image/product2-hover.png" class="hover-img" alt="Product 2 hover" loading="eager">
+      </div>
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product3.png" alt="Basket" class="default-img">
-          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
-        </div>
-        <h3>Basket</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product3.png" class="default-img" alt="Product 3">
+        <img src="image/product3-hover.png" class="hover-img" alt="Product 3 hover" loading="eager">
+      </div>
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
 
     <!-- Row 5 -->
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product1.png" alt="Redding" class="default-img">
-          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
-        </div>
-        <h3>Redding</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product1.png" class="default-img" alt="Product 1">
+        <img src="image/product1-hover.png" class="hover-img" alt="Product 1 hover" loading="eager">
+      </div>
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product2.png" alt="Amerigo" class="default-img">
-          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
-        </div>
-        <h3>Amerigo</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product2.png" class="default-img" alt="Product 2">
+        <img src="image/product2-hover.png" class="hover-img" alt="Product 2 hover" loading="eager">
+      </div>
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product3.png" alt="Basket" class="default-img">
-          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
-        </div>
-        <h3>Basket</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product3.png" class="default-img" alt="Product 3">
+        <img src="image/product3-hover.png" class="hover-img" alt="Product 3 hover" loading="eager">
+      </div>
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
 
     <!-- Row 6 -->
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product1.png" alt="Redding" class="default-img">
-          <img src="image/product1-hover.png" alt="Redding Hover" class="hover-img">
-        </div>
-        <h3>Redding</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product1.png" class="default-img" alt="Product 1">
+        <img src="image/product1-hover.png" class="hover-img" alt="Product 1 hover" loading="eager">
+      </div>
+      <h3>Redding</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product2.png" alt="Amerigo" class="default-img">
-          <img src="image/product2-hover.png" alt="Amerigo Hover" class="hover-img">
-        </div>
-        <h3>Amerigo</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product2.png" class="default-img" alt="Product 2">
+        <img src="image/product2-hover.png" class="hover-img" alt="Product 2 hover" loading="eager">
+      </div>
+      <h3>Amerigo</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
     <div class="product-card">
-        <div class="image-wrapper" style="position: relative; overflow: hidden;">
-          <img src="image/product3.png" alt="Basket" class="default-img">
-          <img src="image/product3-hover.png" alt="Basket Hover" class="hover-img">
-        </div>
-        <h3>Basket</h3>
-        <p class="designer">Designer Name</p>
-        <p class="category">Category</p>
+      <div class="image-wrapper">
+        <img src="image/product3.png" class="default-img" alt="Product 3">
+        <img src="image/product3-hover.png" class="hover-img" alt="Product 3 hover" loading="eager">
+      </div>
+      <h3>Basket</h3>
+      <p class="designer">Designer Name</p>
+      <p class="category">Category</p>
     </div>
   </main>
 
