--- a/header.html
+++ b/header.html
@@ -2,9 +2,9 @@
     <div class="header-inner container">
       <nav class="main-nav">
         <ul>
-          <li>Products</li>
+          <li>Projects</li>
           <li>Rooms</li>
-          <li>Interiors</li>
+          <li>Designs</li>
         </ul>
       </nav>
   
@@ -14,9 +14,9 @@
   
       <nav class="secondary-nav">
         <ul>
-          <li>Stores</li>
-          <li>Designer</li>
-          <li>Journal</li>
+          <li>Studios</li>
+          <li>Factory</li>
+          <li>Blog</li>
           <li>🔍</li>
         </ul>
       </nav>
