--- a/products.html
+++ b/products.html
@@ -26,9 +26,23 @@
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-text">
-      <h1>A synthesis of excellence and refined aesthetics.</h1>
+      <h1>Bespoke Luxury. Crafted For You.</h1>
     </div>
   </section>
+
+  <!-- About Section -->
+<section class="about">
+    <div class="about-inner">
+      <h2>From Imagination to Creation</h2>
+      <p>
+        At AE Living, we transcend the ordinary to craft extraordinary living spaces. 
+        Our bespoke furniture and interiors reflect your unique personality and lifestyle, 
+        blending artistry, craftsmanship, and timeless design. Every piece is created 
+        with an unwavering commitment to luxury and refinement.
+      </p>
+    </div>
+  </section>
+  
   
 <!-- Category Carousel -->
 <section class="carousel-section">
